--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
 cmake_minimum_required(VERSION 3.10.0)
-project(positron)
+project(positron VERSION 0.0.1)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+set(SURF_VERSION 2.1)
+
 find_package(PkgConfig REQUIRED)
 
-pkg_check_modules(PKGDEPDS REQUIRED
-    IMPORTED_TARGET
+pkg_check_modules(PKGDEPDS REQUIRED IMPORTED_TARGET
     x11
     gcr-3
     glib-2.0
@@ -20,7 +21,7 @@ add_executable(surf
     surf/surf.c 
     surf/webext-surf.c)
 
-target_include_directories(surf PUBLIC PkgConfig::PKGDEPDS)
+target_include_directories(surf PUBLIC PkgConfig::PKGDEPDS ".")
 target_link_libraries(surf PUBLIC PkgConfig::PKGDEPDS)
-
+target_compile_definitions(surf PUBLIC VERSION="${SURF_VERSION}")
 
